# GameBoyEmulator

./: .gitignore  LICENSE  MANIFEST.in  README.md  emulator.py  setup.cfg
src/: config.py  main.py
src/emulator/: emulator.py
src/emulator/disassembler/: config.py  decoder.py  disassembler.py  utils.py
src/emulator/disassembler/model/: instruction.py  operand.py
src/emulator/md_reader/: config.py  reader.py  test.py
src/model/: instruction.py  operand.py
