[metadata]
name = gb-emulator
version = 0.0.0
author = Yasin Radi
author_email = yasin.ben.hamman@gmail.com
license = MIT
description = GameBoy emulator.
keywords = gameboy, emulator, gb, gbemu
url = https://github.com/YasinRadi/GameBoyEmulator
long_description = file: README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[aliases]
test = pytest

[options]
package_dir =
     = src
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
where = emulator